# budgy

./: .bazelignore  .gitignore  AGENT.md  AGENTS.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  biome.json  buf.gen.yaml  buf.yaml  docker-compose.yml  env.local.example  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yaml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml
backend/: .mockery.yml  BUILD.bazel  Dockerfile  go.mod  go.sum  sesame.yml  sqlc.yaml
backend/cmd/budgetd/: BUILD.bazel  main.go
backend/cmd/migrate/: main.go
backend/cmd/schema-dump/: BUILD.bazel  main.go
backend/internal/api/: BUILD.bazel  auth.go  connect_handlers.go  converters.go  dto.go  handlers.go  handlers_test.go  mapper_test.go  mappers_gen.go  middleware.go  server.go  transaction_mapper_gen.go  webhook.go  webhook_test.go  wrapper.go
backend/internal/basiq/: BUILD.bazel  client.gen.go  config.yaml  connect.json  generate.go  service.go
backend/internal/basiq/webhooks/: BUILD.bazel  config.yaml  generate.go  webhooks.gen.go  webhooks.json
backend/internal/domain/: BUILD.bazel  budget.go  budget_links.go  budget_links_repository.go  envelope.go  envelope_test.go  external.go  job.go  reconcile.go  repository.go  transaction_category_test.go  user.go  zerosum.go  zerosum_test.go
backend/internal/domain/categoryseed/: BUILD.bazel  au_basiq.go  seed.go
backend/internal/domain/mocks/: BUILD.bazel  mocks.go
backend/internal/mappings/: BUILD.bazel  account_mapper_gen.go  budget_mapper_gen.go  category_mapper_gen.go  converters.go  db_account_mapper_gen.go  db_budget_mapper_gen.go  db_category_mapper_gen.go  db_job_mapper_gen.go  db_transaction_mapper_gen.go  db_user_mapper_gen.go  mappers_gen.go  transaction_mapper_gen.go  transaction_proto_mapper_gen.go  user_mapper_gen.go
backend/internal/service/: BUILD.bazel  account_service.go  auth_service.go  bank_sync_service.go  budget_reconcile.go  budget_reconcile_test.go  budget_service.go  category_service.go  job_queue.go  job_queue_test.go  service.go  service_test.go  transaction_service.go  transaction_service_test.go
backend/internal/service/mocks/: BUILD.bazel  mocks.go
backend/internal/storage/: BUILD.bazel  budget_links.go  category_scan.go  db.go  seed.go  sqlite.go  sqlite_test.go
backend/internal/storage/db/: BUILD.bazel  models.go  queries.sql.go
backend/internal/storage/migrations/: 0001_init.sql  0002_add_users.sql  0002_basiq_alignment.sql  0002_budget_periods.sql  0003_customer_category.sql  0003_envelope_allocations.sql  0004_create_background_jobs.sql  0004_customer_explicit_uncategorized.sql  0005_add_transaction_enrichment_columns.sql  0006_user_centric_entities.sql
backend/internal/storage/schema/: accounts.sql  background_jobs.sql  budget_accounts.sql  budget_category_lines.sql  budgets.sql  categories.sql  envelope_allocations.sql  queries.sql  schema.sql  transactions.sql  users.sql
backend/pkg/utils/: BUILD.bazel  must.go
docs/: basiq-testing.md
proto/budgy/v1/: BUILD.bazel  account.proto  auth.proto  basiq.proto  budget.proto  category.proto  transaction.proto
src/app/: globals.css  layout.tsx  manifest.ts  providers.tsx
src/app/(app)/: layout.tsx
src/app/(app)/accounts/: page.tsx
src/app/(app)/budgets/: page.tsx
src/app/(app)/categories/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/mortgage/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(app)/super/: error.tsx  page.tsx
src/app/(app)/transactions/: page.tsx
src/app/login/: page.tsx
src/app/onboarding/: page.tsx
src/app/register/: page.tsx
src/components/charts/: AreaChart.tsx  BarChart.tsx  DonutChart.tsx  SparklineChart.tsx  chart-theme.ts
src/components/forms/: MoneyInput.tsx  NumInput.tsx  SliderWithText.tsx
src/components/layout/: ErrorScreen.tsx  OnboardingGuard.tsx  auth-gate.tsx  bottom-tabs.tsx  nav-items.ts  page-placeholder.tsx  period-switcher.tsx  sidebar.tsx  theme-toggle.tsx  topbar.tsx
src/components/money/: AnimatedNumber.tsx  money.tsx
src/components/ui/: field-hint.tsx  form.tsx  switch.tsx
src/features/accounts/: hooks.ts  repository.test.ts  repository.ts  schema.ts  types.ts
src/features/accounts/api/: budget-links.ts  client.ts
src/features/accounts/components/: AccountBudgetDialog.tsx  AccountCard.tsx  AccountFormSheet.tsx  AccountList.tsx  AccountsEmpty.tsx  AccountsPageClient.tsx  AccountsSummary.tsx
src/features/auth/: useAuth.ts
src/features/budgets/: hooks.ts  repository.test.ts  repository.ts  schema.ts  types.ts
src/features/budgets/api/: budget-links.ts  client.ts  hooks.ts  keys.ts  period-summary.test.ts  period-summary.ts  schema.ts  summary.test.ts  summary.ts  types.ts
src/features/budgets/components/: AddAllocationDialog.tsx  AddBudgetCategorySheet.tsx  AllocationEditDialog.tsx  AllocationRow.tsx  AssignFundsDialog.tsx  BillCalendar.tsx  BudgetAccountsPanel.tsx  BudgetFormSheet.tsx  BudgetPageHeader.tsx  BudgetPeriodNavigator.tsx  BudgetPeriodView.tsx  BudgetPlannerView.tsx  BudgetSummaryHero.tsx  BudgetsPageClient.test.tsx  (+17 more)
src/features/categories/: hooks.ts  repository.ts  schema.ts  seed.ts  types.ts
src/features/dashboard/: selectors.ts
src/features/mortgage/: hooks.ts  repository.ts  types.ts
src/features/onboarding/: OnboardingWizard.tsx
src/features/super/: hooks.ts  repository.ts  types.ts
src/features/transactions/: hooks.ts  repository.test.ts  repository.ts  schema.ts  types.ts
src/lib/: changelog.ts
src/lib/api/: active-budget.ts  api-repository.test.ts  api-repository.ts  auth.ts  basiq.ts  connect-client.ts
src/lib/data/: export-import.ts
src/lib/date/: au-locale.ts  periods.ts
src/lib/id/: ulid.ts
src/lib/money/: cents.test.ts  cents.ts  format.test.ts  format.ts
src/lib/query/: keys.ts  use-online-query-enabled.ts
src/lib/seed/: demo-data.ts
src/lib/state/: prefs-store.ts  ui-store.ts
src/lib/storage/: api-repository.ts  db.ts  index.ts  local-repository.ts  repository.ts
src/lib/zod/: money.ts
(+58 files in other folders)
