load("@gazelle//:def.bzl", "gazelle")

# gazelle:exclude node_modules
# gazelle:exclude src
# gazelle:exclude public
# gazelle:exclude .bin
# gazelle:exclude .github
# gazelle:exclude proto
# gazelle:resolve go budgeting_system/internal/gen/budgy/v1 //backend/internal/gen/budgy/v1:budgy
gazelle(name = "gazelle")
