module(
    name = "budgeting_system",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Declare Go SDK version
go_sdk.download(version = "1.26.4")

# Gazelle extension for importing modules from backend/go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//backend:go.mod")
use_repo(go_deps, "com_github_ncruces_go_sqlite3", "com_github_pressly_goose_v3", "com_github_stretchr_testify")
