module(
    name = "budgeting_system",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Declare Go SDK version
go_sdk.download(version = "1.26.4")

# Gazelle extension for importing modules from backend/go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//backend:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_golang_jwt_jwt_v5",
    "com_github_lib_pq",
    "com_github_ncruces_go_sqlite3",
    "com_github_oapi_codegen_runtime",
    "com_github_pressly_goose_v3",
    "com_github_stretchr_testify",
    "com_github_yuin_sesame",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_uber_go_zap",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:74ddbf52d93fafbdd21b399271b0b4aac1babf8fa98cab59e5692e01169a1348",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64")
