load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "schema-dump_lib",
    srcs = ["main.go"],
    importpath = "budgeting_system/cmd/schema-dump",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/internal/storage",
        "@com_github_lib_pq//:pq",
    ],
)

go_binary(
    name = "schema-dump",
    embed = [":schema-dump_lib"],
    visibility = ["//visibility:public"],
)
