load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "auth.go",
        "handlers.go",
        "server.go",
        "webhook.go",
    ],
    importpath = "budgeting_system/internal/api",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/basiq",
        "//backend/internal/domain",
        "//backend/internal/storage",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_x_crypto//bcrypt",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "handlers_test.go",
        "webhook_test.go",
    ],
    embed = [":api"],
    deps = [
        "//backend/internal/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
