load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "auth.go",
        "dto.go",
        "handlers.go",
        "middleware.go",
        "server.go",
        "webhook.go",
        "wrapper.go",
    ],
    importpath = "budgeting_system/internal/api",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/domain",
        "//backend/internal/service",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "handlers_test.go",
        "webhook_test.go",
    ],
    embed = [":api"],
    deps = [
        "//backend/internal/domain",
        "//backend/internal/service/mocks",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
