load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "auth.go",
        "connect_handlers.go",
        "middleware.go",
        "server.go",
        "webhook.go",
    ],
    importpath = "budgeting_system/internal/api",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/domain",
        "//backend/internal/gen/budgy/v1:budgy",
        "//backend/internal/gen/budgy/v1/budgyv1connect",
        "//backend/internal/service",
        "@com_connectrpc_connect//:connect",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "handlers_test.go",
        "webhook_test.go",
    ],
    embed = [":api"],
    deps = [
        "//backend/internal/domain",
        "//backend/internal/gen/budgy/v1:budgy",
        "//backend/internal/gen/budgy/v1/budgyv1connect",
        "//backend/internal/service/mocks",
        "@com_connectrpc_connect//:connect",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
