load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mappings",
    srcs = [
        "account_mapper_gen.go",
        "budget_mapper_gen.go",
        "category_mapper_gen.go",
        "converters.go",
        "db_account_mapper_gen.go",
        "db_budget_mapper_gen.go",
        "db_category_mapper_gen.go",
        "db_job_mapper_gen.go",
        "db_transaction_mapper_gen.go",
        "db_user_mapper_gen.go",
        "mappers_gen.go",
        "transaction_mapper_gen.go",
        "transaction_proto_mapper_gen.go",
        "user_mapper_gen.go",
    ],
    importpath = "budgeting_system/internal/mappings",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/domain",
        "//backend/internal/gen/budgy/v1:budgy",
        "//backend/internal/storage/db",
        "@com_github_yuin_sesame//:sesame",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
