load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = ["sqlite.go"],
    embedsrcs = [
        "migrations/0001_init.sql",
        "migrations/0002_add_users.sql",
        "migrations/0003_envelope_allocations.sql",
        "migrations/0004_create_background_jobs.sql",
        "migrations/0005_add_transaction_enrichment_columns.sql",
    ],
    importpath = "budgeting_system/internal/storage",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/domain",
        "@com_github_ncruces_go_sqlite3//driver",
        "@com_github_pressly_goose_v3//:goose",
    ],
)

go_test(
    name = "storage_test",
    srcs = ["sqlite_test.go"],
    embed = [":storage"],
    deps = [
        "//backend/internal/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
