load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "categoryseed",
    srcs = [
        "au_basiq.go",
        "seed.go",
    ],
    importpath = "budgeting_system/internal/domain/categoryseed",
    visibility = ["//backend:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)
